--- a/GuidedCapstone/Notebook_stepfourandfive.ipynb
+++ b/GuidedCapstone/Notebook_stepfourandfive.ipynb
@@ -1571,6 +1571,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "CgC0eMBrAnsM"
+   },
+   "source": [
+    "<font size=4, color='blue'><b>Not able to choose the best model for proving insights to Big Mountain management because there are no values in the table above. There have been some discrepancies between the files and the guide for this section and 6.6. I've contacted my student advisor but have not received instructions on how to proceed yet.</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "colab_type": "text",
     "id": "T2c-zn7TAnsL"
    },
@@ -1581,11 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "CgC0eMBrAnsM"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
